--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,13 +11,13 @@ jobs:
 
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Generate Snake
-        uses: Platane/snk@v2
+        uses: Platane/snk@v2.1.0
         with:
           github_user_name: jonathankerth
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: dist/github-contribution-grid-snake.svg
 
       - name: Commit and Push
         run: |
