--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,7 +17,7 @@ jobs:
         uses: Platane/snk@v2.1.0
         with:
           github_user_name: jonathankerth
-          outputs: dist/github-contribution-grid-snake.svg
+          output: dist/github-contribution-grid-snake.svg
 
       - name: Commit and Push
         run: |
