--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,12 +17,12 @@ jobs:
         uses: Platane/snk@v2.1.0
         with:
           github_user_name: jonathankerth
-          output: dist/github-contribution-grid-snake.svg
+          gif_out_path: dist/github-contribution-grid-snake.gif
 
       - name: Commit and Push
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add dist/github-contribution-grid-snake.svg
+          git add dist/github-contribution-grid-snake.gif
           git commit -m "Generate Snake"
           git push
