--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,15 +14,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Snake
-        uses: Platane/snk@v2.1.0
+        uses: Platane/snk@v2
         with:
           github_user_name: jonathankerth
-          gif_out_path: dist/github-contribution-grid-snake.gif
+          outputs: dist/github-contribution-grid-snake.svg
 
       - name: Commit and Push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add dist/github-contribution-grid-snake.gif
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+          git add dist/github-contribution-grid-snake.svg
           git commit -m "Generate Snake"
           git push
