--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Snake
-        uses: Platane/snk@v2.1.0
+        uses: Platane/snk@v2.0.0
         with:
           github_user_name: jonathankerth
-          outputs: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
       - name: Commit and Push
         env:
