--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,8 +13,13 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Generate Snake
-        uses: Platane/snk@v2.1.0
+        uses: Platane/snk@v2
         with:
           github_user_name: jonathankerth
           outputs: dist/github-contribution-grid-snake.svg
